<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.feature.detail.DetailFragment"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_addnote_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/addnote_title_hint"
        app:layout_constraintBottom_toTopOf="@id/til_addnote_text"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_addnote_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_addnote_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/addnote_text_hint"
        app:layout_constraintTop_toBottomOf="@id/til_addnote_title"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_addnote_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_addnote_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/addnote_add"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>