...
    <Button
        android:id="@+id/b_detail_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/detail_save"
        app:layout_constraintBottom_toTopOf="@id/b_detail_delete"
        />

    <Button
        android:id="@+id/b_detail_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
